--- a/src/sample/PrintTable.fxml
+++ b/src/sample/PrintTable.fxml
@@ -1,14 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="sample.PrintTableMain"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerPrintTable">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
+   <children>
+      <BorderPane prefHeight="635.0" prefWidth="923.0" style="-fx-background-color: #222A35;">
+         <top>
+            <ButtonBar prefHeight="62.0" prefWidth="923.0" BorderPane.alignment="CENTER">
+              <buttons>
+                <Button fx:id="btnOptions" alignment="CENTER" text="_Options" />
+                  <Button fx:id="btnTables" text="_Details" />
+                  <Button fx:id="btnExit" text="E_xit" />
+              </buttons>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets right="40.0" />
+               </padding>
+            </ButtonBar>
+         </top>
+      </BorderPane>
+   </children>
+</GridPane>
