--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -61,3 +61,40 @@
     -fx-font-size: 29px;
     -fx-font-weight: bold;
 }
+
+.forwardBackward {
+    -fx-fill: #222A35;
+}
+
+.forwardBackward:hover {
+    -fx-fill: #53CF48;
+}
+/* TABLE STYLES ========================================================================================================
+*/
+.table-view .column-header-background .filler {
+    -fx-border-radius: 30px 30px 0 0;
+    -fx-background-color: transparent;
+}
+
+.table-view .table-cell{
+    -fx-border-color: transparent;
+    -fx-padding: 2 0 2 10px;
+}
+
+.table-row-cell:hover {
+    -fx-background-color: #93f9b911;
+    -fx-text-background-color: #53CF48;
+}
+.table-row-cell:odd{
+    -fx-background-color: #93f9b911;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+.table-row-cell:even{
+    -fx-background-color: #1dbbdd11;
+    -fx-background-insets: 0, 0 0 1 0;
+    -fx-padding: 0.0em;
+}
+
+/* END OF TABLE STYLES =================================================================================================
+*/
