--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -2,10 +2,8 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -15,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<GridPane alignment="center" hgap="10" stylesheets="@style.css" vgap="10" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerPrintTable">
+<GridPane alignment="center" hgap="10" stylesheets="@style.css" vgap="10" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ControllerLogin">
     <columnConstraints>
         <ColumnConstraints />
     </columnConstraints>
@@ -39,7 +37,7 @@
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
                                 </FontAwesomeIcon>
-                                <FontAwesomeIcon glyphName="COG" size="4em" styleClass="fontAwesomeIcon">
+                                <FontAwesomeIcon fx:id="btnOptions" glyphName="COG" size="4em" styleClass="fontAwesomeIcon">
                                     <VBox.margin>
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
@@ -63,7 +61,7 @@
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
                                 </Separator>
-                                <FontAwesomeIcon glyphName="SIGN_OUT" size="4em" styleClass="fontAwesomeIcon">
+                                <FontAwesomeIcon fx:id="btnLogin" glyphName="SIGN_OUT" size="4em" styleClass="fontAwesomeIcon">
                                     <VBox.margin>
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
@@ -84,7 +82,7 @@
             <top>
                 <AnchorPane maxWidth="1074.0" prefHeight="78.0" prefWidth="1074.0" BorderPane.alignment="CENTER_LEFT">
                     <children>
-                        <HBox alignment="CENTER_LEFT" prefWidth="1075.0" styleClass="topBar">
+                        <HBox alignment="CENTER_LEFT" styleClass="topBar">
                             <children>
                                 <FontAwesomeIcon fx:id="btnUser" glyphName="USER" size="4em" styleClass="fontAwesomeIcon">
                                     <HBox.margin>
@@ -137,14 +135,7 @@
             <center>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                     <children>
-                        <ComboBox fx:id="cbTables" layoutX="265.0" layoutY="14.0" minWidth="-Infinity" prefHeight="25.0" prefWidth="498.0" />
-                        <TableView fx:id="tableDatabase" editable="true" layoutX="13.0" layoutY="54.0" prefHeight="658.0" prefWidth="1001.0" BorderPane.alignment="CENTER">
-                            <BorderPane.margin>
-                                <Insets bottom="30.0" left="30.0" right="30.0" />
-                            </BorderPane.margin>
-                        </TableView>
-                  <FontAwesomeIcon fx:id="btnNext" fill="#63a5b0" glyphName="STEP_FORWARD" layoutX="807.0" layoutY="39.0" size="3em" styleClass="forwardBackward" textAlignment="CENTER" />
-                  <FontAwesomeIcon fx:id="btnPrev" fill="#63a5b0" glyphName="STEP_BACKWARD" layoutX="204.0" layoutY="39.0" size="3em" styleClass="forwardBackward" textAlignment="CENTER" />
+
                     </children>
                 </AnchorPane>
             </center>
