Recoloured and re-centered login page.

--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -139,29 +139,29 @@
             <center>
                 <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
-                  <Label layoutX="550.0" layoutY="52.0" text="Welcome!">
+                  <Label alignment="TOP_LEFT" layoutX="667.0" layoutY="114.0" text="Welcome!" textFill="#091530">
                      <font>
                         <Font name="Marlett" size="48.0" />
                      </font>
                   </Label>
-                  <Label fx:id="lblForgotPassword" layoutX="844.0" layoutY="363.0" text="Forgot The Password?">
+                  <Label fx:id="lblForgotPassword" layoutX="849.0" layoutY="379.0" text="Forgot The Password?" textFill="#091530">
                      <font>
                         <Font name="Corbel Light Italic" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="tfUsername" layoutX="598.0" layoutY="275.0" prefHeight="25.0" prefWidth="347.0" promptText="Username" />
-                  <TextField fx:id="tfPassword" layoutX="598.0" layoutY="320.0" prefHeight="25.0" prefWidth="346.0" promptText="Password" />
-                  <VBox alignment="TOP_CENTER" layoutY="3.0" prefHeight="719.0" prefWidth="517.0" styleClass="LoginPane" stylesheets="@style.css">
+                  <TextField fx:id="tfUsername" layoutX="600.0" layoutY="288.0" prefHeight="30.0" prefWidth="350.0" promptText="Username" />
+                  <TextField fx:id="tfPassword" layoutX="600.0" layoutY="336.0" prefHeight="30.0" prefWidth="350.0" promptText="Password" />
+                  <VBox alignment="TOP_CENTER" layoutY="3.0" prefHeight="719.0" prefWidth="518.0" styleClass="LoginPane" stylesheets="@style.css">
                      <children>
                         <ImageView fitHeight="216.0" fitWidth="288.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                            <VBox.margin>
-                              <Insets bottom="10.0" top="100.0" />
+                              <Insets bottom="10.0" top="65.0" />
                            </VBox.margin>
                            <image>
                               <Image url="@../Images/TravelExpertsLogo-removebg-.png" />
                            </image>
                         </ImageView>
-                        <Label text="Welcome To" textFill="WHITE">
+                        <Label text="Welcome To" textFill="#091530">
                            <font>
                               <Font name="Ebrima Bold" size="24.0" />
                            </font>
@@ -172,26 +172,26 @@
                               <Insets bottom="10.0" />
                            </padding>
                         </Label>
-                        <Label layoutX="205.0" layoutY="614.0" text="TRAVEL EXPERTS" textFill="WHITE">
+                        <Label layoutX="205.0" layoutY="614.0" text="TRAVEL EXPERTS" textFill="#091530">
                            <font>
                               <Font name="Ebrima Bold" size="24.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="125.0" />
+                              <Insets bottom="175.0" />
                            </VBox.margin>
                         </Label>
-                        <Label fx:id="lblCreateAccount" layoutX="172.0" layoutY="377.0" text="Create an account" textFill="WHITE" underline="true">
+                        <Label fx:id="lblCreateAccount" layoutX="172.0" layoutY="377.0" text="Create an account" textFill="#091530" underline="true">
                            <font>
                               <Font name="Ebrima" size="14.0" />
                            </font>
                         </Label>
                      </children>
                   </VBox>
-                  <Label layoutX="574.0" layoutY="113.0" text="Please sign in to continue...">
+                  <Label layoutX="702.0" layoutY="170.0" text="Please sign in to continue..." textFill="#091530">
                      <font>
                         <Font name="System Italic" size="12.0" />
                      </font></Label>
-                  <Button fx:id="btnAgentLogin" layoutX="598.0" layoutY="485.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="347.0" styleClass="loginBtn" text="Login" />
+                  <Button fx:id="btnAgentLogin" layoutX="600.0" layoutY="530.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="347.0" styleClass="loginBtn" text="Login" textFill="#091530" />
                </children>
                 </AnchorPane>
             </center>
