--- a/src/sample/style.css
+++ b/src/sample/style.css
@@ -1,11 +1,11 @@
-.button {
-    -fx-text-fill: #F0D1D5;
-    -fx-font-size: 18px;
-    -fx-font-weight: bold;
-    -fx-border-color: lightblue;
-    -fx-background-color: transparent;
-    -fx-border-radius: 10px;
-}
+/*.button {*/
+/*    -fx-text-fill: #F0D1D5;*/
+/*    -fx-font-size: 18px;*/
+/*    -fx-font-weight: bold;*/
+/*    -fx-border-color: lightblue;*/
+/*    -fx-background-color: transparent;*/
+/*    -fx-border-radius: 10px;*/
+/*}*/
 
 .borderPane {
     -fx-background-color: linear-gradient(to bottom right, white 20%, white 70%, #F0D1D5 100%);
