--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -192,6 +192,11 @@
                         <Font name="System Italic" size="12.0" />
                      </font></Label>
                   <Button fx:id="btnAgentLogin" layoutX="600.0" layoutY="530.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="347.0" styleClass="loginBtn" text="Login" textFill="#091530" />
+                  <Label fx:id="lblBadLogin" layoutX="650.0" layoutY="259.0" text="Incorrect username or password. Please try again." textFill="#ed4337" visible="false">
+                     <font>
+                        <Font name="Calibri" size="12.0" />
+                     </font>
+                  </Label>
                </children>
                 </AnchorPane>
             </center>
