--- a/src/sample/PrintTable.fxml
+++ b/src/sample/PrintTable.fxml
@@ -39,7 +39,7 @@
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
                                 </FontAwesomeIcon>
-                                <FontAwesomeIcon glyphName="COG" size="4em" styleClass="fontAwesomeIcon">
+                                <FontAwesomeIcon fx:id="btnOptions" glyphName="COG" size="4em" styleClass="fontAwesomeIcon">
                                     <VBox.margin>
                                         <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                                     </VBox.margin>
